--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -26,6 +28,7 @@
     "web": {
       "favicon": "./app/assets/icon.png"
     },
-    "description": "A marketplace for selling stuff you don't want anymore."
+    "description": "A marketplace for selling stuff you don't want anymore.",
+    "githubUrl": "https://github.com/valentinDiogo/DoneWithIt"
   }
 }
